finished medium media query
added medium screen media query styles in styles.css

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
             <h2>Gallery</h2>
             <p>Here are some highlights of my work. The locations and year are in the caption. </p>
 
+            <div>
             <figure>
                 <img src="images/Chile.png" alt="Chile">
                 <figcaption id="place1">Chile, 2001</figcaption>
@@ -88,6 +89,8 @@
                 <img src="images/Wyoming.png" alt="Wyoming">
                 <figcaption id="place12">Wyoming, 2021</figcaption>
             </figure>
+        </div>
+        
         <section>
             <h2>Contact</h2>
             <p>Please fill out this form and I’ll connect with you soon.</p>
