--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
         </main>
 
         <footer>
-        <small><p>Copyright 2021 TK Photography</p></small>
+        <p><small>Copyright 2021 TK Photography</small></p>
         </footer>
 
     </body>
